--- a/packages/db/tsconfig.json
+++ b/packages/db/tsconfig.json
@@ -1,19 +1,16 @@
+ 
 {
-
   "compilerOptions": {
     "rootDir": "src",
     "outDir": "dist",
-
     "target": "ES2022",
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
-
     "lib": ["ES2022"],
     "types": ["node"],
-
     "declaration": true,
-    "declarationMap": true,
-    "skipLibCheck": true
+    "esModuleInterop": true,
+    "strict": true
   },
   "include": ["src"]
 }
