--- a/packages/db/tsconfig.json
+++ b/packages/db/tsconfig.json
@@ -1,16 +1,15 @@
- 
 {
   "compilerOptions": {
-    "rootDir": "src",
-    "outDir": "dist",
     "target": "ES2022",
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
-    "lib": ["ES2022"],
-    "types": ["node"],
+    "outDir": "dist",
     "declaration": true,
     "esModuleInterop": true,
-    "strict": true
+    "strict": true,
+    "skipLibCheck": true, 
+
   },
-  "include": ["src"]
+  "include": ["src"],
+  "exclude": ["generated"]
 }
