--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "packages",
+  "name": "@repo/types",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,11 +9,5 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "bcrypt": "^6.0.0",
-    "zod": "^4.2.1"
-  },
-  "devDependencies": {
-    "@types/bcrypt": "^6.0.0"
-  }
+  "type": "commonjs"
 }
