--- a/packages/schemas/package.json
+++ b/packages/schemas/package.json
@@ -1,13 +1,18 @@
 {
-  "name": "@repo/schemas",
+  "name": "schemas",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "type": "module",
+  "dependencies": {
+    "zod": "^4.2.1"
+  },
+  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs"
+  "main": "src/index.ts",
+  "types": "src/index.ts"
 }
