--- a/packages/schemas/package.json
+++ b/packages/schemas/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "schemas",
+  "name": "@repo/schemas",
   "version": "1.0.0",
   "description": "",
   "type": "module",
@@ -8,7 +8,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc -b"
   },
   "keywords": [],
   "author": "",
