--- a/packages/db/tsconfig.json
+++ b/packages/db/tsconfig.json
@@ -1,13 +1,25 @@
 {
+  "extends": "@repo/typescript-config/base.json",
   "compilerOptions": {
     "target": "ES2022",
     "module": "NodeNext",
+    "types": ["node"],
     "moduleResolution": "NodeNext",
-    "outDir": "dist",
-    "declaration": true,
+    "rootDir": "src",
+    "outDir": "dist", 
     "esModuleInterop": true,
     "strict": true,
     "skipLibCheck": true, 
+    "sourceMap": true,
+    "declaration": true,
+    "declarationMap": true,
+    "noUncheckedIndexedAccess": true,
+    "exactOptionalPropertyTypes": true, 
+    "jsx": "react-jsx",
+    "verbatimModuleSyntax": true,
+    "isolatedModules": true,
+    "noUncheckedSideEffectImports": true,
+    "moduleDetection": "force", 
 
   },
   "include": ["src"],
