--- a/packages/services/package.json
+++ b/packages/services/package.json
@@ -6,9 +6,13 @@
   "main": "src/index.ts",
   "types": "src/index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc -b"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "private": true, 
+  "publishConfig": {
+    "access": "public"
+  }
 }
