--- a/packages/services/tsconfig.json
+++ b/packages/services/tsconfig.json
@@ -1,5 +1,6 @@
 {
   // Visit https://aka.ms/tsconfig to read more about this file
+    "extends": "@repo/typescript-config/base.json",
   "compilerOptions": {
     // File Layout
     "rootDir": "./src",
@@ -40,5 +41,14 @@
     "noUncheckedSideEffectImports": true,
     "moduleDetection": "force",
     "skipLibCheck": true,
+  },
+    "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "default": "./dist/index.js"
+    }
+  },
+  "scripts": {
+    "build": "tsc -b"
   }
 }
